syntax = "proto3";
package v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/mephistolie/chefbook-backend-auth/api/proto/v1";

message GetAuthInfoRequest {
  string id = 1;
  string email = 2;
  string nickname = 3;
}

message GetAuthInfoResponse {
  string id = 1;
  string email = 2;
  optional string nickname = 3;
  string role = 4;
  google.protobuf.Timestamp registrationTimestamp = 5;
  bool isActivated = 6;
  bool isBlocked = 7;
  OAuth oAuth = 8;
  google.protobuf.Timestamp deletionTimestamp = 9;
}

message OAuth {
  optional string googleId = 1;
  optional int64 vkId = 2;
}
