syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-auth/api/proto/v1";

message RefreshSessionRequest {
  string refreshToken = 1;
  string ip = 2;
  string userAgent = 3;
}

message RefreshSessionResponse {
  string accessToken = 1;
  string refreshToken = 2;
}
